--- a/ledger/sandbox-on-x/BUILD.bazel
+++ b/ledger/sandbox-on-x/BUILD.bazel
@@ -19,6 +19,9 @@ da_scala_library(
         "@maven//:com_github_scopt_scopt",
         "@maven//:com_typesafe_akka_akka_actor",
         "@maven//:com_typesafe_akka_akka_stream",
+        "@maven//:com_github_pureconfig_pureconfig_core",
+        "@maven//:com_github_pureconfig_pureconfig_generic",
+        "@maven//:com_chuusai_shapeless",
     ],
     tags = ["maven_coordinates=com.daml:sandbox-on-x:__VERSION__"],
     visibility = [
@@ -56,6 +59,7 @@ da_scala_library(
         "//libs-scala/resources-grpc",
         "@maven//:com_google_guava_guava",
         "@maven//:com_google_protobuf_protobuf_java",
+        "@maven//:com_typesafe_config",
         "@maven//:io_dropwizard_metrics_metrics_core",
         "@maven//:org_slf4j_slf4j_api",
     ],
@@ -69,6 +73,7 @@ da_scala_library(
         "@maven//:com_typesafe_akka_akka_actor",
         "@maven//:com_typesafe_akka_akka_stream",
         "@maven//:org_scalaz_scalaz_core",
+        "@maven//:com_github_scopt_scopt",
     ],
     tags = ["maven_coordinates=com.daml:sandbox-classic-server:__VERSION__"],
     visibility = [
@@ -313,7 +318,6 @@ da_scala_library(
         "//ledger/ledger-configuration",
         "//ledger/ledger-resources",
         "//ledger/ledger-resources:ledger-resources-test-lib",
-        "//ledger/ledger-runner-common",
         "//ledger/metrics",
         "//ledger/participant-integration-api",
         "//ledger/participant-integration-api:participant-integration-api-tests-lib",
@@ -341,7 +345,9 @@ da_scala_library(
     name = "sandbox-on-x-app-lib",
     srcs = glob(["src/app/scala/**/*.scala"]),
     resources = glob(["src/app/resources/**/*"]),
-    scala_deps = [],
+    scala_deps = [
+        "@maven//:com_github_pureconfig_pureconfig_core",
+    ],
     tags = ["maven_coordinates=com.daml:sandbox-on-x-app:__VERSION__"],
     visibility = ["//visibility:public"],
     deps = [
@@ -350,6 +356,7 @@ da_scala_library(
         "//ledger/ledger-runner-common",
         "//libs-scala/contextualized-logging",
         "//libs-scala/resources",
+        "@maven//:com_typesafe_config",
     ],
 )
 
@@ -357,14 +364,15 @@ da_scala_library(
     name = "sandbox-on-x-test-app",
     srcs = glob(["src/test/app/scala/**/*.scala"]),
     resources = glob(["src/test/app/resources/**/*"]),
-    scala_deps = [],
+    scala_deps = [
+        "@maven//:com_github_pureconfig_pureconfig_core",
+    ],
     visibility = ["//visibility:public"],
     deps = [
         ":sandbox-on-x",
         "//daml-lf/data",
         "//daml-lf/engine",
         "//ledger/caching",
-        "//ledger/ledger-api-auth",
         "//ledger/ledger-api-common",
         "//ledger/ledger-resources",
         "//ledger/ledger-runner-common",
@@ -374,6 +382,7 @@ da_scala_library(
         "//libs-scala/ports",
         "//libs-scala/postgresql-testing",
         "//libs-scala/resources",
+        "@maven//:com_typesafe_config",
     ],
 )
 
@@ -525,6 +534,144 @@ conformance_test(
         "--participant participant-id=example,port=6865,ledger-api-transactions-buffer-max-size=3",
         "--buffered-streams-page-size=1",
         "--buffered-ledger-api-streams",
+    ],
+    test_tool_args = [
+        "--verbose",
+    ],
+)
+
+SERVERS_HOCON = {
+    "h2database": {
+        "binary": ":app-hocon",
+    },
+    "postgresql": {
+        "binary": ":conformance-test-postgres-bin-hocon",
+    },
+    "oracle": {
+        "binary": ":conformance-test-oracle-bin-hocon",
+        "tags": oracle_tags,
+    },
+}
+
+da_scala_binary(
+    name = "app-hocon",
+    main_class = "com.daml.ledger.sandbox.MainHocon",
+    tags = [
+        "fat_jar",
+        "maven_coordinates=com.daml:sandbox-on-x-app-jar:__VERSION__",
+        "no_scala_version_suffix",
+    ],
+    visibility = ["//visibility:public"],
+    runtime_deps = [
+        "@maven//:ch_qos_logback_logback_classic",
+        "@maven//:ch_qos_logback_logback_core",
+        "@maven//:com_h2database_h2",
+    ],
+    deps = [
+        ":sandbox-on-x-app-lib",
+    ],
+)
+
+da_scala_binary(
+    name = "conformance-test-oracle-bin-hocon",
+    main_class = "com.daml.ledger.sandbox.MainWithEphemeralOracleUserHocon",
+    visibility = ["//visibility:public"],
+    runtime_deps = [],
+    deps = [
+        ":sandbox-on-x-test-app",
+    ],
+)
+
+da_scala_binary(
+    name = "conformance-test-postgres-bin-hocon",
+    main_class = "com.daml.ledger.sandbox.MainWithEphemeralPostgresqlHocon",
+    visibility = ["//visibility:public"],
+    runtime_deps = [],
+    deps = [
+        ":sandbox-on-x-test-app",
+    ],
+)
+
+#Duplicated tests using new hocon-style configuration
+conformance_test(
+    name = "conformance-test-no-conflict-checking-hocon",
+    ports = [6865],
+    server = ":app-hocon",
+    server_args = [
+        "-C ledger.participants.default.api-server.seeding=testing-weak",
+        "-C bridge.conflict-checking-enabled=false",
+    ],
+    test_tool_args = [
+        "--verbose",
+        "--exclude=ClosedWorldIT",
+        "--exclude=ContractKeysIT",
+        "--exclude=SemanticTests",
+        "--exclude=RaceConditionIT",
+        "--exclude=ExceptionRaceConditionIT",
+        "--exclude=ExceptionsIT:ExRollbackDuplicateKeyCreated",
+        "--exclude=ExceptionsIT:ExRollbackDuplicateKeyArchived",
+        "--exclude=ConfigManagementServiceIT:CMConcurrentSetConflicting",
+        "--exclude=CommandDeduplication",
+        "--exclude=CommandServiceIT:CSduplicate",
+        "--exclude=PartyManagementServiceIT:PMRejectionDuplicateHint",
+    ],
+)
+
+server_conformance_test(
+    name = "conformance-test-hocon",
+    server_args = [
+        "-C ledger.participants.default.api-server.seeding=testing-weak",
+        "-C ledger.participants.default.api-server.user-management.enabled=true",
+    ],
+    servers = SERVERS_HOCON,
+    test_tool_args = [
+        "--verbose",
+    ],
+)
+
+# By default, participants are tuned for performance. The buffers and caches used by the participant
+# are by default so large that they are not filled by the small amount of data produced by the conformance test.
+# We run one conformance test with small buffer/cache sizes to make sure we cover cases where data doesn't fit
+# into a cache or where multiple buffers have to be combined.
+server_conformance_test(
+    name = "conformance-test-tiny-buffers-hocon",
+    server_args = [
+        "-C ledger.participants.default.api-server.seeding=testing-weak",
+        "-C ledger.participants.default.index.max-contract-key-state-cache-size=2",
+        "-C ledger.participants.default.index.max-contract-state-cache-size=2",
+        "-C ledger.participants.default.index.acs-id-page-size=2",
+        "-C ledger.participants.default.index.events-page-size=2",
+        "-C ledger.participants.default.api-server.user-management.enabled=true",
+        "-C ledger.participants.default.api-server.user-management.max-cache-size=2",
+        # "-C ledger.participants.default.api-server.user-management.max-users-page-size=2" -- minimum size is 100 which is not tiny anymore
+    ],
+    servers = {"postgresql": SERVERS_HOCON["postgresql"]},
+    test_tool_args = [
+        "--verbose",
+    ],
+)
+
+conformance_test(
+    name = "conformance-test-static-time-hocon",
+    ports = [6865],
+    server = ":app-hocon",
+    server_args = [
+        "-C ledger.participants.default.api-server.seeding=testing-weak",
+        "-C ledger.participants.default.api-server.time-provider-type=static",
+    ],
+    test_tool_args = [
+        "--verbose",
+    ],
+)
+
+conformance_test(
+    name = "conformance-test-in-memory-fan-out-hocon",
+    ports = [6865],
+    server = ":app-hocon",
+    server_args = [
+        "-C ledger.participants.default.api-server.seeding=testing-weak",
+        "-C ledger.participants.default.index.max-transactions-in-memory-fan-out-buffer-size=10",
+        "-C ledger.participants.default.index.enable-in-memory-fan-out-for-ledger-api=true",
     ],
     test_tool_args = [
         "--verbose",
