--- a/ledger/ledger-api-tests/tool/BUILD.bazel
+++ b/ledger/ledger-api-tests/tool/BUILD.bazel
@@ -160,3 +160,66 @@ sh_test(
         "@bazel_tools//tools/bash/runfiles",
     ],
 )
+
+conformance_test(
+    name = "conformance-test-hocon",
+    extra_data = [
+        "//ledger/test-common/test-certificates:client.crt",
+        "//ledger/test-common/test-certificates:client.pem",
+        "//ledger/test-common/test-certificates:server.crt",
+        "//ledger/test-common/test-certificates:server.pem",
+        "//ledger/test-common/test-certificates:server.pem.enc",
+        "//ledger/test-common/test-certificates:ca.crt",
+    ],
+    hocon = True,
+    lf_versions = lf_version_configuration_versions,
+    ports = [6865],
+    server = "//ledger/sandbox-on-x:conformance-test-postgres-bin-hocon",
+    server_args = [
+        "-C ledger.participants.default.api-server.seeding=testing-weak",
+        "-C ledger.participants.default.api-server.tls.enabled=true",
+        "-C ledger.participants.default.api-server.tls.key-cert-chain-file=$$(rlocation $$TEST_WORKSPACE/$(rootpath //ledger/test-common/test-certificates:server.crt))",
+        "-C ledger.participants.default.api-server.tls.trust-cert-collection-file=$$(rlocation $$TEST_WORKSPACE/$(rootpath //ledger/test-common/test-certificates:ca.crt))",
+        "-C ledger.participants.default.api-server.tls.key-file=$$(rlocation $$TEST_WORKSPACE/$(rootpath //ledger/test-common/test-certificates:server.pem.enc))",
+        "-C ledger.participants.default.api-server.tls.secrets-url=https://raw.githubusercontent.com/digital-asset/daml/main/ledger/test-common/files/server-pem-decryption-parameters.json",
+        "-C ledger.participants.default.api-server.tls.minimum-server-protocol-version=TLSv1.3",
+    ],
+    test_tool_args = [
+        "--verbose",
+        "--crt $$(rlocation $$TEST_WORKSPACE/$(rootpath //ledger/test-common/test-certificates:client.crt))",
+        "--cacrt $$(rlocation $$TEST_WORKSPACE/$(rootpath //ledger/test-common/test-certificates:ca.crt))",
+        "--pem $$(rlocation $$TEST_WORKSPACE/$(rootpath //ledger/test-common/test-certificates:client.pem))",
+        "--additional=TLSOnePointThreeIT",
+    ],
+)
+
+conformance_test(
+    name = "conformance-test-tls1.2-or-newer-hocon",
+    extra_data = [
+        "//ledger/test-common/test-certificates:client.crt",
+        "//ledger/test-common/test-certificates:client.pem",
+        "//ledger/test-common/test-certificates:server.crt",
+        "//ledger/test-common/test-certificates:server.pem",
+        "//ledger/test-common/test-certificates:server.pem.enc",
+        "//ledger/test-common/test-certificates:ca.crt",
+    ],
+    hocon = True,
+    lf_versions = lf_version_configuration_versions,
+    ports = [6865],
+    server = "//ledger/sandbox-on-x:conformance-test-postgres-bin-hocon",
+    server_args = [
+        "-C ledger.participants.default.api-server.seeding=testing-weak",
+        "-C ledger.participants.default.api-server.tls.enabled=true",
+        "-C ledger.participants.default.api-server.tls.key-cert-chain-file=$$(rlocation $$TEST_WORKSPACE/$(rootpath //ledger/test-common/test-certificates:server.crt))",
+        "-C ledger.participants.default.api-server.tls.trust-cert-collection-file=$$(rlocation $$TEST_WORKSPACE/$(rootpath //ledger/test-common/test-certificates:ca.crt))",
+        "-C ledger.participants.default.api-server.tls.key-file=$$(rlocation $$TEST_WORKSPACE/$(rootpath //ledger/test-common/test-certificates:server.pem.enc))",
+        "-C ledger.participants.default.api-server.tls.secrets-url=https://raw.githubusercontent.com/digital-asset/daml/main/ledger/test-common/files/server-pem-decryption-parameters.json",
+    ],
+    test_tool_args = [
+        "--verbose",
+        "--crt $$(rlocation $$TEST_WORKSPACE/$(rootpath //ledger/test-common/test-certificates:client.crt))",
+        "--cacrt $$(rlocation $$TEST_WORKSPACE/$(rootpath //ledger/test-common/test-certificates:ca.crt))",
+        "--pem $$(rlocation $$TEST_WORKSPACE/$(rootpath //ledger/test-common/test-certificates:client.pem))",
+        "--include=TLSAtLeastOnePointTwoIT",
+    ],
+)
