--- a/ledger/ledger-api-tests/tool/BUILD.bazel
+++ b/ledger/ledger-api-tests/tool/BUILD.bazel
@@ -162,7 +162,7 @@ sh_test(
 )
 
 conformance_test(
-    name = "conformance-test-hocon",
+    name = "hocon-conformance-test",
     extra_data = [
         "//ledger/test-common/test-certificates:client.crt",
         "//ledger/test-common/test-certificates:client.pem",
@@ -174,7 +174,7 @@ conformance_test(
     hocon = True,
     lf_versions = lf_version_configuration_versions,
     ports = [6865],
-    server = "//ledger/sandbox-on-x:conformance-test-postgres-bin-hocon",
+    server = "//ledger/sandbox-on-x:hocon-conformance-test-postgres-bin",
     server_args = [
         "-C ledger.participants.default.api-server.seeding=testing-weak",
         "-C ledger.participants.default.api-server.tls.enabled=true",
@@ -194,7 +194,7 @@ conformance_test(
 )
 
 conformance_test(
-    name = "conformance-test-tls1.2-or-newer-hocon",
+    name = "hocon-conformance-test-tls1.2-or-newer",
     extra_data = [
         "//ledger/test-common/test-certificates:client.crt",
         "//ledger/test-common/test-certificates:client.pem",
@@ -206,7 +206,7 @@ conformance_test(
     hocon = True,
     lf_versions = lf_version_configuration_versions,
     ports = [6865],
-    server = "//ledger/sandbox-on-x:conformance-test-postgres-bin-hocon",
+    server = "//ledger/sandbox-on-x:hocon-conformance-test-postgres-bin",
     server_args = [
         "-C ledger.participants.default.api-server.seeding=testing-weak",
         "-C ledger.participants.default.api-server.tls.enabled=true",
