support rebase against main

--- a/ledger/sandbox-on-x/src/test/app/resources/application.conf
+++ b/ledger/sandbox-on-x/src/test/app/resources/application.conf
@@ -62,6 +62,7 @@ ledger {
           max-cache-size = 100
           max-users-page-size = 1000
         }
+        api-stream-shutdown-timeout = "5 seconds"
       }
       index {
         acs-contract-fetching-parallelism = 2
@@ -75,6 +76,7 @@ ledger {
         max-contract-key-state-cache-size = 100000
         max-contract-state-cache-size = 100000
         max-transactions-in-memory-fan-out-buffer-size = 10000
+        api-stream-shutdown-timeout = "5 seconds"
       }
       indexer {
         batch-within-millis = 50
