address code review concerns

--- a/ledger/sandbox-on-x/src/test/app/resources/application.conf
+++ b/ledger/sandbox-on-x/src/test/app/resources/application.conf
@@ -64,7 +64,7 @@ ledger {
         }
         api-stream-shutdown-timeout = "5 seconds"
       }
-      index {
+      index-service {
         acs-contract-fetching-parallelism = 2
         acs-global-parallelism = 10
         acs-id-fetching-parallelism = 2
