rollback the distinction for idle and max connection in a pool.

--- a/ledger/sandbox-on-x/src/test/app/resources/application.conf
+++ b/ledger/sandbox-on-x/src/test/app/resources/application.conf
@@ -33,8 +33,7 @@ ledger {
         database {
           connection-pool {
             connection-timeout = "250ms"
-            max-pool-size = 16
-            minimum-idle = 16
+            connection-pool-size = 16
           }
           jdbc-url = "jdbc:h2:mem:default;db_close_delay=-1;db_close_on_exit=false"
           jdbc-url = ${?API_SERVER_DATABASE_JDBC_URL}
@@ -83,8 +82,7 @@ ledger {
         database {
           connection-pool {
             connection-timeout = "250ms"
-            max-pool-size = 17
-            minimum-idle = 17
+            connection-pool-size = 17
           }
           jdbc-url = "jdbc:h2:mem:default;db_close_delay=-1;db_close_on_exit=false"
           jdbc-url = ${?INDEXER_DATABASE_JDBC_URL}
