DataSource (jdbc_ is extracted out from ParticipantConfig

--- a/ledger/sandbox-on-x/src/app/resources/application.conf
+++ b/ledger/sandbox-on-x/src/app/resources/application.conf
@@ -29,6 +29,12 @@ ledger {
     metrics {
         reporting-interval = "10s"
     }
+    data-source {
+        default {
+            jdbc-url = "jdbc:h2:mem:default;db_close_delay=-1;db_close_on_exit=false"
+            jdbc-url = ${?DEFAULT_PARTICIPANT_DATABASE_JDBC_URL}
+        }
+    }
     participants {
         default {
             api-server {
@@ -41,13 +47,11 @@ ledger {
                     tracker-retention-period = "300 seconds"
                 }
                 configuration-load-timeout = "10s"
-                database {
+                data-source-properties {
                     connection-pool {
                         connection-timeout = "250ms"
                         connection-pool-size = 16
                     }
-                    jdbc-url = "jdbc:h2:mem:default;db_close_delay=-1;db_close_on_exit=false"
-                    jdbc-url = ${?API_SERVER_DATABASE_JDBC_URL}
                     postgres {}
                 }
                 initial-ledger-configuration {
@@ -90,13 +94,11 @@ ledger {
             indexer {
                 batch-within-millis = 50
                 batching-parallelism = 4
-                database {
+                data-source-properties {
                     connection-pool {
                         connection-timeout = "250ms"
                         connection-pool-size = 17
                     }
-                    jdbc-url = "jdbc:h2:mem:default;db_close_delay=-1;db_close_on_exit=false"
-                    jdbc-url = ${?INDEXER_DATABASE_JDBC_URL}
                     postgres {
                         synchronous-commit = off
                         tcp-keepalives-count = 5
