DPP-1026 Add a feature flag (#13927)
* Add a feature flag

* Fix no conflict checking test

* Fixup

--- a/ledger/sandbox-on-x/BUILD.bazel
+++ b/ledger/sandbox-on-x/BUILD.bazel
@@ -451,6 +451,8 @@ conformance_test(
         "--exclude=CommandDeduplication",
         "--exclude=CommandServiceIT:CSduplicate",
         "--exclude=PartyManagementServiceIT:PMRejectionDuplicateHint",
+        "--exclude=ExplicitDisclosureIT:EDArchivedDisclosedContracts",
+        "--exclude=ExplicitDisclosureIT:EDInvalidDisclosedContracts",
     ],
 )
 
