SoX Classic Removal, WIP
CHANGELOG_BEGING
CHANGELOG_END

--- a/daml-script/test/BUILD.bazel
+++ b/daml-script/test/BUILD.bazel
@@ -138,6 +138,7 @@ da_scala_library(
         "//daml-lf/archive:daml_lf_1.dev_archive_proto_java",
         "//daml-lf/archive:daml_lf_archive_reader",
         "//daml-lf/data",
+        "//daml-lf/engine",
         "//daml-lf/interface",
         "//daml-lf/interpreter",
         "//daml-lf/language",
@@ -148,14 +149,14 @@ da_scala_library(
         "//ledger-api/rs-grpc-bridge",
         "//ledger-api/testing-utils",
         "//ledger-service/jwt",
-        "//ledger/caching",
         "//ledger/ledger-api-auth",
         "//ledger/ledger-api-common",
-        "//ledger/ledger-configuration",
         "//ledger/ledger-resources",
+        "//ledger/ledger-runner-common",
         "//ledger/participant-integration-api",
-        "//ledger/sandbox-common",
         "//ledger/sandbox-common:sandbox-common-scala-tests-lib",
+        "//ledger/sandbox-on-x",
+        "//ledger/sandbox-on-x:sandbox-classic-server",
         "//ledger/sandbox-on-x:sandbox-on-x-test-lib",
         "//libs-scala/ports",
         "//libs-scala/ports:ports-testing",
@@ -163,7 +164,6 @@ da_scala_library(
         "//libs-scala/resources-akka",
         "//libs-scala/resources-grpc",
         "//libs-scala/timer-utils",
-        "@maven//:com_auth0_java_jwt",
         "@maven//:org_scalatest_scalatest_compatible",
     ],
 )
@@ -197,6 +197,7 @@ da_scala_test_suite(
         "//daml-lf/archive:daml_lf_1.dev_archive_proto_java",
         "//daml-lf/archive:daml_lf_archive_reader",
         "//daml-lf/data",
+        "//daml-lf/engine",
         "//daml-lf/interface",
         "//daml-lf/interpreter",
         "//daml-lf/language",
@@ -217,12 +218,14 @@ da_scala_test_suite(
         "//ledger/ledger-api-common",
         "//ledger/ledger-configuration",
         "//ledger/ledger-resources",
+        "//ledger/ledger-runner-common",
         "//ledger/metrics",
         "//ledger/participant-integration-api",
         "//ledger/participant-integration-api:participant-integration-api-tests-lib",
         "//ledger/participant-state",
         "//ledger/sandbox-common",
         "//ledger/sandbox-common:sandbox-common-scala-tests-lib",
+        "//ledger/sandbox-on-x",
         "//ledger/sandbox-on-x:sandbox-classic-server",
         "//ledger/sandbox-on-x:sandbox-on-x-test-lib",
         "//ledger/test-common",
