--- a/ledger-service/http-json-testing/BUILD.bazel
+++ b/ledger-service/http-json-testing/BUILD.bazel
@@ -38,6 +38,9 @@ hj_scalacopts = lf_scalacopts + [
         ],
         deps = [
             "//bazel_tools/runfiles:scala_runfiles",
+            "//daml-lf/engine",
+            "//daml-lf/language",
+            "//daml-lf/transaction",
             "//language-support/scala/bindings-akka",
             "//ledger-api/rs-grpc-bridge",
             "//ledger-api/testing-utils",
@@ -48,15 +51,15 @@ hj_scalacopts = lf_scalacopts + [
             "//ledger-service/cli-opts",
             "//ledger-service/jwt",
             "//ledger-service/utils",
-            "//ledger/caching",
             "//ledger/ledger-api-auth",
             "//ledger/ledger-api-common",
-            "//ledger/ledger-configuration",
             "//ledger/ledger-resources",
+            "//ledger/ledger-runner-common",
             "//ledger/metrics",
             "//ledger/participant-integration-api",
             "//ledger/sandbox-common",
             "//ledger/sandbox-common:sandbox-common-scala-tests-lib",
+            "//ledger/sandbox-on-x",
             "//ledger/sandbox-on-x:sandbox-classic-server",
             "//ledger/sandbox-on-x:sandbox-on-x-test-lib",
             "//libs-scala/contextualized-logging",
