--- a/ledger-service/http-json/BUILD.bazel
+++ b/ledger-service/http-json/BUILD.bazel
@@ -315,7 +315,6 @@ alias(
             "//ledger-service/fetch-contracts",
             "//ledger/ledger-resources",
             "//ledger/metrics",
-            "//ledger/sandbox-common",
             "//ledger/sandbox-common:sandbox-common-scala-tests-lib",
             "//ledger/sandbox-on-x:sandbox-on-x-test-lib",
             "//ledger-service/http-json-cli:{}".format(edition),
@@ -325,6 +324,7 @@ alias(
             "//ledger-service/utils",
             "//ledger/ledger-api-auth",
             "//ledger/ledger-api-common",
+            "//ledger/sandbox-on-x:sandbox-classic-server",
             "//ledger/test-common:dar-files-default-lib",
             "//libs-scala/contextualized-logging",
             "//libs-scala/crypto",
@@ -390,8 +390,8 @@ alias(
             "//ledger/ledger-api-auth",
             "//ledger/ledger-resources",
             "//ledger/metrics",
-            "//ledger/sandbox-common",
             "//ledger/sandbox-common:sandbox-common-scala-tests-lib",
+            "//ledger/sandbox-on-x:sandbox-classic-server",
             "//ledger/sandbox-on-x:sandbox-on-x-test-lib",
             "//ledger-service/http-json-cli:{}".format(edition),
             "//ledger-service/http-json-testing:{}".format(edition),
@@ -527,25 +527,25 @@ test_suite(
             ":http-json-{}".format(edition),
             "//bazel_tools/runfiles:scala_runfiles",
             "//daml-lf/data",
+            "//daml-lf/engine",
             "//language-support/scala/bindings-akka",
             "//ledger-api/rs-grpc-bridge",
             "//ledger-api/testing-utils",
             "//ledger-service/fetch-contracts",
-            "//ledger/ledger-configuration",
             "//libs-scala/contextualized-logging",
             "//ledger-service/http-json-cli:{}".format(edition),
             "//ledger-service/http-json-testing:{}".format(edition),
             "//ledger-service/jwt",
             "//ledger-service/utils",
-            "//ledger/caching",
             "//ledger/ledger-api-auth",
-            "//ledger/ledger-api-common",
             "//ledger/ledger-resources",
+            "//ledger/ledger-runner-common",
             "//ledger/metrics",
             "//ledger/participant-integration-api",
             "//ledger/participant-integration-api:participant-integration-api-tests-lib",
             "//ledger/sandbox-common",
             "//ledger/sandbox-common:sandbox-common-scala-tests-lib",
+            "//ledger/sandbox-on-x",
             "//ledger/sandbox-on-x:sandbox-classic-server",
             "//libs-scala/db-utils",
             "//libs-scala/ports",
