--- a/triggers/service/BUILD.bazel
+++ b/triggers/service/BUILD.bazel
@@ -163,20 +163,23 @@ da_scala_library(
         "//daml-lf/archive:daml_lf_1.dev_archive_proto_java",
         "//daml-lf/archive:daml_lf_archive_reader",
         "//daml-lf/data",
+        "//daml-lf/engine",
         "//daml-lf/interpreter",
+        "//daml-lf/language",
+        "//daml-lf/transaction",
         "//language-support/scala/bindings-akka",
         "//ledger-api/rs-grpc-bridge",
         "//ledger-api/testing-utils",
         "//ledger-service/jwt",
-        "//ledger/caching",
         "//ledger/ledger-api-auth",
         "//ledger/ledger-api-common",
-        "//ledger/ledger-configuration",
         "//ledger/ledger-resources",
+        "//ledger/ledger-runner-common",
         "//ledger/participant-integration-api",
         "//ledger/participant-integration-api:participant-integration-api-tests-lib",
         "//ledger/sandbox-common",
         "//ledger/sandbox-common:sandbox-common-scala-tests-lib",
+        "//ledger/sandbox-on-x",
         "//ledger/sandbox-on-x:sandbox-classic-server",
         "//libs-scala/adjustable-clock",
         "//libs-scala/db-utils",
@@ -190,7 +193,6 @@ da_scala_library(
         "//triggers/service/auth:middleware-api",
         "//triggers/service/auth:oauth2-middleware",
         "//triggers/service/auth:oauth2-test-server",
-        "@maven//:ch_qos_logback_logback_classic",
         "@maven//:com_auth0_java_jwt",
         "@maven//:eu_rekawek_toxiproxy_toxiproxy_java_2_1_3",
         "@maven//:org_scalatest_scalatest_compatible",
