--- a/ledger/ledger-api-bench-tool/BUILD.bazel
+++ b/ledger/ledger-api-bench-tool/BUILD.bazel
@@ -129,6 +129,7 @@ da_scala_test_suite(
         "//ledger/metrics",
         "//ledger/sandbox-common",
         "//ledger/sandbox-common:sandbox-common-scala-tests-lib",
+        "//ledger/sandbox-on-x:sandbox-classic-server",
         "//ledger/sandbox-on-x:sandbox-on-x-test-lib",
         "//ledger/test-common:dar-files-default-lib",
         "//libs-scala/adjustable-clock",
