--- a/ledger/sandbox-common/BUILD.bazel
+++ b/ledger/sandbox-common/BUILD.bazel
@@ -78,15 +78,20 @@ da_scala_library(
         "@maven//:org_postgresql_postgresql",
     ],
     deps = [
-        ":sandbox-common",
+        #":sandbox-common",
+        "//ledger/sandbox-on-x",
+        "//ledger/sandbox-on-x:sandbox-classic-server",
         "//bazel_tools/runfiles:scala_runfiles",
         "//daml-lf/archive:daml_lf_archive_reader",
         "//daml-lf/data",
+        "//daml-lf/language",
+        "//daml-lf/engine",
+        "//daml-lf/transaction",
         "//language-support/scala/bindings",
         "//ledger-api/rs-grpc-bridge",
         "//ledger-api/testing-utils",
         "//ledger-service/jwt",
-        "//ledger/caching",
+        #"//ledger/caching",
         "//ledger/ledger-api-auth",
         "//ledger/ledger-api-auth-client",
         "//ledger/ledger-api-client",
@@ -94,6 +99,7 @@ da_scala_library(
         "//ledger/ledger-api-domain",
         "//ledger/ledger-configuration",
         "//ledger/ledger-resources",
+        "//ledger/ledger-runner-common",
         "//ledger/metrics",
         "//ledger/participant-integration-api",
         "//ledger/test-common",
@@ -103,7 +109,7 @@ da_scala_library(
         "//libs-scala/resources",
         "//libs-scala/resources-akka",
         "//libs-scala/resources-grpc",
-        "@maven//:ch_qos_logback_logback_classic",
+        #"@maven//:ch_qos_logback_logback_classic",
         "@maven//:com_auth0_java_jwt",
         "@maven//:io_netty_netty_handler",
         "@maven//:org_scalatest_scalatest_compatible",
