--- a/triggers/tests/BUILD.bazel
+++ b/triggers/tests/BUILD.bazel
@@ -65,8 +65,8 @@ EOF
       $(location //compiler/damlc) build --project-root=$$TMP_DIR --ghc-option=-Werror -o $$PWD/$(location acs{suffix}.dar)
       rm -rf $$TMP_DIR
     """.format(
-            sdk = sdk_version,
             lf_version = lf_version,
+            sdk = sdk_version,
             suffix = suffix,
         ),
         tools = ["//compiler/damlc"],
@@ -106,9 +106,10 @@ da_scala_library(
         "//ledger/ledger-api-common",
         "//ledger/ledger-api-domain",
         "//ledger/ledger-resources",
+        "//ledger/ledger-runner-common",
         "//ledger/participant-integration-api",
-        "//ledger/sandbox-common",
         "//ledger/sandbox-common:sandbox-common-scala-tests-lib",
+        "//ledger/sandbox-on-x:sandbox-classic-server",
         "//ledger/sandbox-on-x:sandbox-on-x-test-lib",
         "//ledger/test-common",
         "//libs-scala/contextualized-logging",
@@ -150,6 +151,7 @@ da_scala_library(
             "//bazel_tools/runfiles:scala_runfiles",
             "//daml-lf/archive:daml_lf_archive_reader",
             "//daml-lf/data",
+            "//daml-lf/engine",
             "//daml-lf/interpreter",
             "//daml-lf/language",
             "//language-support/scala/bindings",
@@ -162,9 +164,11 @@ da_scala_library(
             "//ledger/ledger-api-domain",
             "//ledger/ledger-configuration",
             "//ledger/ledger-resources",
+            "//ledger/ledger-runner-common",
             "//ledger/participant-integration-api",
             "//ledger/sandbox-common",
             "//ledger/sandbox-common:sandbox-common-scala-tests-lib",
+            "//ledger/sandbox-on-x",
             "//ledger/sandbox-on-x:sandbox-classic-server",
             "//ledger/sandbox-on-x:sandbox-on-x-test-lib",
             "//ledger/test-common",
