--- a/ledger-service/http-json-oracle/BUILD.bazel
+++ b/ledger-service/http-json-oracle/BUILD.bazel
@@ -51,8 +51,8 @@ da_scala_library(
         "//ledger-service/http-json-testing:ee",
         "//ledger-service/jwt",
         "//ledger-service/utils",
-        "//ledger/sandbox-common",
         "//ledger/sandbox-common:sandbox-common-scala-tests-lib",
+        "//ledger/sandbox-on-x:sandbox-classic-server",
         "//ledger/sandbox-on-x:sandbox-on-x-test-lib",
         "//libs-scala/db-utils",
         "//libs-scala/oracle-testing",
